all requirements completed